{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 11,
  "lineage": "4129552f-331d-f817-0073-4f132029e50b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f67204f4de4b5927",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0abe3cf6db670ccc0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0abe3cf6db670ccc0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-05d8ec68ca4fbd990",
            "private_dns": "ip-10-0-0-141.eu-west-1.compute.internal",
            "private_ip": "10.0.0.141",
            "public_ip": "54.154.70.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f0ef95fe813cbd49",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8317d56c850af9d",
            "tags": {
              "Name": "Eng48-Daniel-Chow-python-app - instance of app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04bbd86c87fff80b1"
            ]
          },
          "dependencies": [
            "aws_security_group.app_security_group",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a0fef7422b155221",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Daniel-Chow-python-app - IG"
            },
            "vpc_id": "vpc-0fa8f0e7bd014bd85"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c2ff6d7e467b4e3a",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a0fef7422b155221",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng48-Daniel-Chow-python-app - route table"
            },
            "vpc_id": "vpc-0fa8f0e7bd014bd85"
          },
          "dependencies": [
            "aws_internet_gateway.app_gw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af5be57c5a82011b",
            "route_table_id": "rtb-0c2ff6d7e467b4e3a",
            "subnet_id": "subnet-0b8317d56c850af9d"
          },
          "dependencies": [
            "aws_internet_gateway.app_gw",
            "aws_route_table.app_route",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-04bbd86c87fff80b1",
            "description": "Allow port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04bbd86c87fff80b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Eng48-Daniel-Chow-python-app",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng48-Daniel-Chow-python-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa8f0e7bd014bd85"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0b8317d56c850af9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0b8317d56c850af9d",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Daniel-Chow-python-app"
            },
            "vpc_id": "vpc-0fa8f0e7bd014bd85"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0fa8f0e7bd014bd85",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-086c5fead04642e3b",
            "default_route_table_id": "rtb-05fa75e8e96f119c0",
            "default_security_group_id": "sg-0c7e3fed868653c78",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fa8f0e7bd014bd85",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05fa75e8e96f119c0",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Daniel-Chow-python-app"
            }
          }
        }
      ]
    }
  ]
}